Fix: Use root locale to format numbers in log output.